--- a/flutter_application_1/android/app/build.gradle
+++ b/flutter_application_1/android/app/build.gradle
@@ -65,6 +65,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
